# Document-RAG-Chatbot

./: .env  .gitignore  LICENSE  README.md  example.env  pyproject.toml  supabase_setup.sql
app/UI/: Streamlit_app.py
app/config/: settings.py
app/loaders/: docx_loader.py  image_model.py  pdf_loader.py
app/rag/: chatbot.py
app/vectorstore/: supabase_store.py
document-rag-chatbot/: README.md
document-rag-chatbot/app/UI/: Streamlit_app.py
document-rag-chatbot/embeddings/: embedding_model.py
document-rag-chatbot/loaders/: docx_loader.py  image_model.py
document-rag-chatbot/rag/: chatbot.py  retriever.py
document-rag-chatbot/utils/: text_splitter.py
document-rag-chatbot/vectorstore/: supabase_store.py
embeddings/: embedding_model.py
