[project]
name = "document-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "supabase>=2.30.0",
]
